--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
