--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@mui/x-date-pickers": "^6.10.1",
+    "dayjs": "^1.11.9",
     "materialize-css": "^1.0.0-rc.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
