--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
